STOCHV-FiMa: Korrekturen Teil 2

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_1_zentraleFragestellungen.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_1_zentraleFragestellungen.tex
@@ -1,6 +1,6 @@
 \section{Zentrale Fragestellungen der Finanzmathematik}
 
-\subsection{Bewertung von Derivaten und Abischerung gegen aus deren Kauf/Verkauf entstehende Risiken}
+\subsection{Bewertung von Derivaten und Absicherung gegen aus deren Kauf/Verkauf entstehende Risiken}
 
 \begin{definition}[Derivat]
 	Ein \begriff{Derivat} ist ein Finanzprodukt, dessen Auszahlung sich vom Preis eines oder mehrerer Basisgüter [underlying] ableitet.
