--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_4_capitalAssetPricingModel.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_4_capitalAssetPricingModel.tex
@@ -1,6 +1,6 @@
 \section{Capital Asset Pricing Model (CAPM)}
 
-Ausgangspunkt: Optimalportfolio im zweiten Markowitz-Problem $p_\ast = \lambda * \Sigma^{-1}\brackets{\mu - r * \one}$. Wir normieren dies so, dass $\trans{p_\ast} \one = \one$. Damit brauchen wir $\lambda_\ast = \frac{1}{\trans{\one} \Sigma^{-1} \brackets{\mu - r\one}} = \frac{1}{b-cr}$.
+Ausgangspunkt: Optimalportfolio im zweiten Markowitz-Problem $p_\ast = \lambda * \Sigma^{-1}\brackets{\mu - r * \one}$. Wir normieren dies so, dass $\trans{p_\ast} \one = 1$. Damit brauchen wir $\lambda_\ast = \frac{1}{\trans{\one} \Sigma^{-1} \brackets{\mu - r\one}} = \frac{1}{b-cr}$.
 
 Wert des Marktportfolios: $M_0 = 1$ und $M_T = \brackets{1 + \trans{p_\ast} * R}$, Rendite $R_M = \trans{p_\ast} * R$
 
