--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_1_value-at-risk.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_1_value-at-risk.tex
@@ -85,7 +85,7 @@ wird auch als verallgemeinerte Inverse von $F_L$ bezeichnet.
 \begin{itemize}[nolistsep, topsep=-\parskip]
 	\item für jede Verteilung $F_L$ definiert
 	\item einfach zu berechnen
-	\item einfach zu vestehen / zu erklären
+	\item einfach zu verstehen / zu erklären
 \end{itemize}
 
 \textbf{Nachteile des $\VaR$:}
