--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -80,6 +80,7 @@
 
 \begin{document}
 
+%\darktitlefalse
 \makeTUtitle
     
 \tableofcontents
@@ -124,4 +125,6 @@
 \input{stochv_6_0_einfuehrung}
 \input{stochv_6_1_optimalesStoppproblem}
 \input{stochv_6_2_amerikanischeOptionen}
+
+\vfill \hfill $\square$
 \end{document}
