--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_3_risikomasseAxiomatik.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_3_risikomasseAxiomatik.tex
@@ -27,7 +27,7 @@ als Risikomaße geeignet sind.
 		\end{equation*}
 		\item Es gilt (d) $+$ (e) $\follows$ (c), denn
 		\begin{equation*}
-		\rho(L_1 + L_2) \overset{(d)}{=} 2 * \rho(\frac{L_1}{2} + \frac{L_2}{2}) \overset{(e)}{=} \rho(L_1) + \rho(L_2)
+		\rho(L_1 + L_2) \overset{(d)}{=} 2 * \rho(\frac{L_1}{2} + \frac{L_2}{2}) \overset{(e)}{\le} \rho(L_1) + \rho(L_2)
 		\end{equation*}
 	\end{itemize}
 \end{*bemerkung_inline}
@@ -88,13 +88,13 @@ als Risikomaße geeignet sind.
 		\tag{$\star$} \label{eq: 5.3-star}
 		\end{equation*}Fixiere $\alpha \in (0,1)$ und schreibe $q_L \defeq \VaR_\alpha(L)$. Damit ist nun zu zeigen, dass $c \defeq \ES_\alpha(L) + \ES_\alpha(M) - \ES_\alpha(L+M) \ge 0$ für alle $L, M \in \mathcal{M}'$
 		Mit \eqref{eq: 5.3-star} gilt
-%		\begin{equation*}
-%		\begin{aligned}
-%		(1+\alpha) * c 
-%		&= \EW[{L * \one_{\menge{L \ge q_L}} + M \one_{\menge{M \ge q_M}} - (L+M) \one_{\menge{L+M \ge q_{M+N}}}}] \\
-%		&= \EW[{L(\underbrace{\one_{\menge{L \ge q_L}}} - \one_{\menge{L+M \ge q_{M+L}}}_{\defqe D_L})}}] + \EW[{M (\underbrace{\one_{\menge{M \ge q_M}} - \one_{\menge{L+M \ge q_{M+L}}}_{\defqe D_M})}}]
-%	\end{aligned}
-%	\end{equation*}
+		\begin{equation*}
+		\begin{aligned}
+			(1+\alpha) * c 
+			&= \EW[{L * \one_{\menge{L \ge q_L}} + M \one_{\menge{M \ge q_M}} - (L+M) \one_{\menge{L+M \ge q_{M+N}}}}] \\
+			&= \EW[{L(\underbrace{\one_{\menge{L \ge q_L}} - \one_{\menge{L+M \ge q_{M+L}}}}_{\defqe D_L})}] + \EW[{M (\underbrace{\one_{\menge{M \ge q_M}} - \one_{\menge{L+M \ge q_{M+L}}}}_{\defqe D_M})}]
+		\end{aligned}
+		\end{equation*}
 	Es gilt
 	\begin{equation*}
 	\left. \begin{array}{rcl}
@@ -125,7 +125,7 @@ heißt Akzeptanzmenge (d.h. die Menge aller akzeptablen Risiken)
 Eigenschaften von Risikomaßen $\rho$ können über $A_\rho$ beschrieben werden:
 \begin{theorem}
 \begin{enumerate}[label=\Roman*., nolistsep, leftmargin=*]
-	\item Sei $\rho$ ein monetäres RIsikomaß mit Akzeptanzmenge $A_\rho$. Dann gilt:
+	\item Sei $\rho$ ein monetäres Risikomaß mit Akzeptanzmenge $A_\rho$. Dann gilt:
 	\begin{enumerate}[label=(\alph*)]
 		\item $A_\rho \neq \emptyset$ und diese erfüllt
 		\begin{equation*}
@@ -136,7 +136,7 @@ Eigenschaften von Risikomaßen $\rho$ können über $A_\rho$ beschrieben werden:
 		\begin{equation*}
 			\rho_A(L) = \inf\menge{m \in \R : L - m \in A_\rho}
 		\end{equation*}
-		Interpreatation: $\rho(L)$ ist Mindestanforderung an Kapital, welche hinterlegt werden muss um $L$ akueptabel zu machen.
+		Interpretation: $\rho(L)$ ist Mindestanforderung an Kapital, welche hinterlegt werden muss um $L$ akzeptabel zu machen.
 	\end{enumerate}
 	\item Sei $A \subseteq \mathcal{M}$ eine Menge, welche \eqref{eq: 4.4-mon} erfüllt. Dann definiert
 	\begin{equation*}
